...
    func getDocumentsDirectory() -> URL {
        FileManager
            .default
            .urls(for: .documentDirectory, in: .userDomainMask)[0]
    }

    /// Returns the recordings directory URL `/Documents/Recordings`.
    /// Ensures the directory exists, creates if missing.
    func getRecordingsDirectory() -> URL {
        let recordingsDir = getDocumentsDirectory().appendingPathComponent(
            "Recordings", isDirectory: true)
        ensureRecordingsDirectoryExists(at: recordingsDir)
        return recordingsDir
...
